[gd_scene load_steps=9 format=3]

[ext_resource type="Script" path="res://client/FlyableMain.gd" id="1"]
[ext_resource type="Script" path="res://client/PlayerShip.gd" id="2"]
[ext_resource type="PackedScene" path="res://client/Starfield.tscn" id="3"]
[ext_resource type="PackedScene" path="res://client/HUD.tscn" id="4"]
[ext_resource type="AudioStream" path="res://client/audio/bounce.wav" id="5"]
[ext_resource type="Script" path="res://client/Ball.gd" id="6"]
[ext_resource type="TileSet" path="res://client/graphics/tilesets/subspace_base/tileset.tres" id="7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ship"]
radius = 8.0

[node name="FlyableMain" type="Node2D"]
script = ExtResource("1")

[node name="Starfield" parent="." instance=ExtResource("3")]

[node name="TileMapBG" type="TileMap" parent="."]
tile_set = ExtResource("7")
format = 2
layer_0/name = "Background"
layer_0/z_index = -10

[node name="TileMapSolid" type="TileMap" parent="."]
tile_set = ExtResource("7")
format = 2
layer_0/name = "Solid"
layer_0/z_index = 0
layer_0/tile_data = PackedInt32Array()

[node name="TileMapFG" type="TileMap" parent="."]
tile_set = ExtResource("7")
format = 2
layer_0/name = "Foreground"
layer_0/z_index = 10

[node name="Ball" type="Node2D" parent="."]
script = ExtResource("6")

[node name="PlayerShip" type="CharacterBody2D" parent="."]
script = ExtResource("2")
position = Vector2(512, 384)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerShip"]
shape = SubResource("CircleShape2D_ship")

[node name="BounceAudio" type="AudioStreamPlayer" parent="PlayerShip"]
stream = ExtResource("5")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 0)

[node name="HUD" parent="." instance=ExtResource("4")]
